# ai-dev

./: .gitignore  .gitmodules  CONTRIBUTING.md  DEPLOYMENT.md  EXTERNAL_APPS.md  GETTING_STARTED.md  Makefile  PRODUCTION_READINESS.md  README.md  RESUME_GENERATOR_QUICKSTART.md  SYSTEM_STATUS.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_resume_generator.sh  turbo.json
.github/: release-drafter.yml
.venv-1/: pyvenv.cfg
apps/: README.md  config.json
apps/portal-python/: .dockerignore  .env.example  .env.production  AUTO_MATCH_WORKFLOW.md  AUTO_RESUME_FEATURE.md  Dockerfile  FIND_JOBS_FLOW.md  JSEARCH_EFFICIENT_STRATEGY.md  JSEARCH_HOW_IT_WORKS.md  MATCHING_SERVICE_CONSOLIDATION.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  download_jobs_autopaging.py  download_jobs_efficient.py  download_jobs_flexible.py  download_jobs_smart.py  entrypoint.sh  generate_resume.py  main.py  migrate_add_jsearch_fields.py  package.json  pyproject.toml  seed_configs.py  test_auto_match.py  test_integration.py  test_match_scoring.py  test_matching_service.py  test_smoke.py
apps/portal-python/ai/: __init__.py  auto_match_workflow.py  council.py  job_application_pipeline.py  job_match_scorer.py  job_search_service.py  jobbernaut_service.py  llm_clients.py  matching_service.py  opportunities_manager.py  user_profile_service.py
apps/portal-python/apis/: __init__.py  config_routes.py  graphql_schema.py  graphql_schema.py.bak  jobs_routes.py  rest_routes.py
apps/portal-python/jobbernaut/: __init__.py  analyze_job_resonance.txt  config.json  generate_resume.txt  generate_storytelling_arc.txt  humanization_low.txt  research_company.txt
apps/portal-python/jobbernaut/prompts/: generate_cover_letter.txt  humanization_high.txt  humanization_medium.txt
apps/portal-python/jobbernaut/src/: main.py  main_intelligence_methods.py  models.py  template_renderer.py  utils.py
apps/portal-python/jobbernaut/templates/: cover_letter.jinja2  resume.jinja2
apps/portal-python/portal_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/portal-python/python/: __init__.py  config.py  config_loader.py  database.py  error_handlers.py  logging_config.py  monitoring.py  rate_limiter.py
apps/portal-python/resume_matcher/: __init__.py
apps/portal-python/tools/: __init__.py  bulk_application_generator.py  config_validator.py  job_application_saver.py  job_models.py  one_click_workflow.py  resume_generator.py
data/: user_profile.json
docs/: AIHAWK_AUTOMATION_SETUP.md  AIHAWK_TOOLS.md  AUTO_APPLY_FEATURE.md  AUTO_APPLY_FLOW_STATUS.md  CONFIG_MANAGEMENT.md  FAST_APPLICATION_TOOLS.md  JSEARCH_SETUP.md  RESUME_GENERATOR.md
(+74 files in other folders)
