[project]
name = "portal-python"
version = "0.1.0"
description = "Unified Python backend for AI Dev Portal - combining resume tools, LLM council, and job automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # GraphQL
    "strawberry-graphql[fastapi]>=0.254.0",
    
    # AI/LLM
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    
    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Database (optional - for future)
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

