[project]
name = "portal-python"
version = "0.1.0"
description = "Unified Python backend for AI Dev Portal - combining resume tools, LLM council, and job automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    
    # GraphQL
    "strawberry-graphql[fastapi]>=0.254.0",
    
    # AI/LLM
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    
    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

# Explicit setuptools package discovery to avoid "flat-layout" errors during
# editable builds on CI. This tells setuptools which packages to include.
[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "apis*"]

# Define build backend explicitly for reproducible builds in CI
[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

